--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>bluestky</title>
   <link rel="stylesheet" href="./style.css">
-
+<link rel="shortcut icon" type="https://imgur.com/JlbL86A" href="img/1.jpg"/>
 </head>
 <body>
 <!-- partial:index.partial.html -->
